syntax = "proto3";

package platform.edge.v2alpha;

import "platform/options/v2/annotations.proto";

option (platform.options.v2.network_file) = {type: NETWORK_TYPE_INTERNET;};
option (platform.options.v2.language) = {languages: [LANGUAGE_TYPE_RUST]};
option (platform.options.v2.configuration) = {enabled: true,};
option (platform.options.v2.graphql) = {enabled: false};
option (platform.options.v2.api_file) = {
  type: API_TYPE_PRIVATE;
  cycle: API_LIFECYCLE_ALPHA;
  interface: API_INTERFACE_TYPE_DISCOVERABLE;
};

option go_package = "github.com/openecosystems/ecosystem/libs/private/go/sdk/gen/platform/edge/v2alpha;edgev2alphapb";

// Edge Waf Configuration data
message EdgeRouterConfiguration {
  // Test waf configuration string
  string edge_router_config = 1;

}
