// Code generated by protoc-gen-platform protobuf/configuration. DO NOT EDIT.
syntax = "proto3";

package platform.configuration.v2alpha;

import "platform/options/v2/annotations.proto";

import "platform/communication/v1beta/preference_center.proto";
import "platform/communication/v1alpha/preference_center.proto";
import "platform/audit/v2alpha/audit.proto";
import "platform/cli/v2alpha/oeco.proto";
import "platform/cryptography/v2alpha/certificate.proto";
import "platform/cryptography/v2alpha/certificate_authority.proto";
import "platform/cryptography/v2alpha/encryption.proto";
import "platform/dns/v2alpha/dynamic_dns.proto";
import "platform/edge/v2alpha/edge_router.proto";
import "platform/event/v2alpha/event_multiplexer.proto";
import "platform/event/v2alpha/event_subscription.proto";
import "platform/iam/v2alpha/iam_api_key.proto";
import "platform/iam/v2alpha/iam_authentication.proto";
import "platform/mesh/v2alpha/cryptographic_mesh.proto";
import "platform/reference/v2alpha/reference.proto";
import "platform/system/v2alpha/system.proto";

option (platform.options.v2.network_file) = {type: NETWORK_TYPE_INTERNET;};
option (platform.options.v2.api_file) = {
  type: API_TYPE_PUBLIC;
  cycle: API_LIFECYCLE_ALPHA;
  interface: API_INTERFACE_TYPE_OPERATIONAL;
};

option go_package = "libs/public/go/protobuf/gen/platform/configuration/v2alpha;configurationv2alphapb";

message SpecPlatformConfiguration {

    platform.communication.v1alpha.PreferenceCenterConfiguration preference_center_configuration_v1alpha = 2;

    platform.audit.v2alpha.AuditConfiguration audit_configuration_v2alpha = 3;

    platform.cli.v2alpha.OecoConfiguration oeco_configuration_v2alpha = 4;

    platform.cryptography.v2alpha.CertificateConfiguration certificate_configuration_v2alpha = 5;

    platform.cryptography.v2alpha.CertificateAuthorityConfiguration certificate_authority_configuration_v2alpha = 6;

    platform.cryptography.v2alpha.EncryptionConfiguration encryption_configuration_v2alpha = 7;

    platform.dns.v2alpha.DynamicDnsConfiguration dynamic_dns_configuration_v2alpha = 8;

    platform.edge.v2alpha.EdgeRouterConfiguration edge_router_configuration_v2alpha = 9;

    platform.event.v2alpha.EventMultiplexerConfiguration event_multiplexer_configuration_v2alpha = 10;

    platform.event.v2alpha.EventSubscriptionConfiguration event_subscription_configuration_v2alpha = 11;

    platform.iam.v2alpha.IamApiKeyConfiguration iam_api_key_configuration_v2alpha = 12;

    platform.iam.v2alpha.IamAuthenticationConfiguration iam_authentication_configuration_v2alpha = 13;

    platform.mesh.v2alpha.CryptographicMeshConfiguration cryptographic_mesh_configuration_v2alpha = 14;

    platform.reference.v2alpha.ReferenceConfiguration reference_configuration_v2alpha = 15;

    platform.system.v2alpha.SystemConfiguration system_configuration_v2alpha = 16;

    platform.communication.v1beta.PreferenceCenterConfiguration preference_center_configuration_v1beta = 17;
}
